--- a/03-terceiraaula.html
+++ b/03-terceiraaula.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 03</title>
+    <title>Document</title>
 </head>
 <body>
     <H1>Aula 02</H1>
@@ -15,8 +15,7 @@
     <a href="https://w3schools.com">Visit W3schools</a>
     <br>
 
-
     <!-- <img alt= "descrição na imagem" width="200" height="150" src="Coloco o src da imagem que quiser"  -->
-    
+
 </body>
 </html>
