--- a/03-terceiraaula.html
+++ b/03-terceiraaula.html
@@ -10,10 +10,13 @@
     <H1>Aula 02</H1>
     <p>Olá mundo!</p>
 
-    <img src="Ok.PNG" alt="...">
-
+    <img swidth= "200" height= "53px" src="Ok.PNG" alt="">
+    <br>
+    <img src="Ok.PNG"  alt="">
+    <br>
     <a href="https://w3schools.com">Visit W3schools</a>
     <br>
+    <a href="http://unasp.br">Unasp</a>
 
     <!-- <img alt= "descrição na imagem" width="200" height="150" src="Coloco o src da imagem que quiser"  -->
 
