--- a/04-aula.html
+++ b/04-aula.html
@@ -6,17 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 04</title>
 </head>
-<body>
+<body style="background-color: azure;">
+
+    <p>This</p>
+    <p>is  a paragraph</p>
+    <p>this is a paragraph</p>
+    <p>this is a paragraph</p>  
+
+    <h1>This is heading</h1>
+    <p>This is some text.</p>
+    <hr>
+    <h2>This is heading 2</h2>
+    <p> This is some other paragraph</p>
+
+    <p>This is<br>a apragraph<br>with line breaks.</p>
+
+    <h1 style="background-color: azure;"> This is a paragraph</h1>
+    <p style="background-color: brown;">This </p>
+
+    <h2 style="background-color: rgb(33, 214, 121);"> This is a paragraph</h2>
+    <p style="background-color: rgb(2, 36, 63);">This </p>
+
+    <h2>Introdução a table</h2>
+
+    <table>
+        <tr>
+            <th>Nome</th>
+            <th>Sobre</th>
+        </tr>
+
+        <tr>
+            <td>
+                Wandrel
+            </td>
+            <td>
+                Alves
+            </td>
+        </tr>
+
+        <tr>
+            <td>Luciene</td>
+            <td>Alves</td>~
+        </tr>
+
+    </table>
 
 
-
-
-
-
-
-
-
-    
-    
 </body>
 </html>
